correction of text align in the resume area

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,6 +117,9 @@ nav {
     height: 331px;
     margin-bottom: 40px;
 }
+.resume {
+    text-align: center;
+}
 .resume .content {
     color: hsl(207, 13%, 34%);
     line-height: 28px;
@@ -320,6 +323,9 @@ li:hover {
     #resume .title.main {
         font-size: 42px;
         margin-bottom: 140px;
+    }
+    .resume {
+        text-align: left;
     }
     .resume-content {
         align-self: flex-start;
